--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/button": "^2.0.34",
     "@nextui-org/react": "^2.4.2",
     "framer-motion": "^11.2.13",
     "next": "14.2.4",
