--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "14.2.4",
     "next-view-transitions": "^0.2.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
